--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "react-native-typescript-library-starter",
-  "version": "1.0.5",
-  "description": "Extremely easy to create a React Native Component Library with both Stateful and Functional Component Examples.",
+  "name": "react-native-switch-button",
+  "version": "0.1.0",
+  "description": "Animated switch button with fully customizable React Native Component",
   "main": "./build/dist/SwitchButton.js",
-  "repository": "git@github.com:WrathChaos/react-native-typescript-library-starter.git",
+  "repository": "git@github.com:WrathChaos/react-native-switch-button.git",
   "author": "FreakyCoder <kurayogun@gmail.com>",
   "license": "MIT",
   "homepage": "https://www.freakycoder.com",
-  "bugs": "https://github.com/WrathChaos/react-native-typescript-library-starter/issues",
+  "bugs": "https://github.com/WrathChaos/react-native-switch-button/issues",
   "keywords": [
+    "switch",
+    "toggle",
+    "button",
+    "switch-button",
+    "toggle-button",
+    "animated",
+    "animation",
     "FreakyCoder",
     "freakycoder",
     "kuray",
@@ -27,8 +34,7 @@
     "postversion": "git push && git push --tags"
   },
   "peerDependencies": {
-    "react": ">= 16.x.x",
-    "react-native": ">=0.63.x"
+    "@freakycoder/react-native-bounceable": ">= 0.2.5"
   },
   "devDependencies": {
     "@types/react": "^16.9.53",
