Library name is changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-switch-button",
+  "name": "@freakycoder/react-native-switch-button",
   "version": "0.1.0",
   "description": "Animated switch button with fully customizable React Native Component",
   "main": "./build/dist/SwitchButton.js",
